tests/baselines/reference/parserMemberVariableDeclaration2.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration2.ts(2,17): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration2.ts (1 errors) ====
    class C {
      static static Foo;
                    ~~~
!!! error TS1005: ';' expected.
    }